Refactor entities, services, and configuration for UUID primary keys and Flyway enhancements
- Updated entities `User`, `Subscription`, and `PaymentTransaction` to use UUID-based primary keys.
- Added `PrePersist` methods for auto-generating UUIDs.
- Refactored related database schema and migration scripts to accommodate UUID keys.
- Simplified `SubscriptionService` and fixed minor accessor issues.
- Enhanced Flyway configuration in `application.yml`.
- Adjusted imports and minor consistency improvements.